--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,7 +41,7 @@ jobs:
     # Ensure test job passes before pushing image.
 #     needs: test
 
-    runs-on: arm64v8/ubuntu:latest
+    runs-on: ubuntu-18.04
     if: github.event_name == 'push'
 
     steps:
