--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker buildx build --no-cache --platform linux/arm64 -t pacmanai/scafford:latest
+        run: docker buildx build --no-cache --platform linux/arm64 -t pacmanai/scafford:latest .
 
       - name: Push image
         run: |
