--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,8 +45,8 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: docker/build-push-action@v2
+      
       - name: Build image
         run: docker buildx build --no-cache --platform linux/arm64 -t pacmanai/scafford:latest .
 
